<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button10">.</string>
    <string name="button11">÷</string>
    <string name="button12">×</string>
    <string name="button13">-</string>
    <string name="button14">+</string>
    <string name="button15">C</string>
    <string name="button16">0</string>
    <string name="button17">=</string>

    <string name="about_source">Source Code</string>
    <string name="about_version">Version</string>
    <string name="about_po">Project Offline</string>
    <string name="about_about">Project Offline Calculator</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_copy">Copied.</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="about_mastodon">Mastodon Account</string>
    <string name="about_website">Project Offline Website</string>
    <string name="about_privacy_comment">Please read our privacy policy.</string>
    <string name="about_contact">You can get in touch with us.</string>

    <string name="version">0.5.2</string>

    <string name="preference_theme_content">Dark Theme</string>
    <string name="preference_theme_summary">Relaunching app is required.</string>
    <string name="preference_theme">Theme</string>
</resources>
