<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/dark_theme1"
    tools:context=".AboutActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="424dp"
        android:text="@string/about_source"
        android:background="?attr/dark_theme3"
        android:textColor="?attr/dark_theme4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="352dp"
        android:text="@string/about_version"
        android:background="?attr/dark_theme3"
        android:textColor="?attr/dark_theme4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="496dp"
        android:text="@string/about_privacy"
        android:background="?attr/dark_theme3"
        android:textColor="?attr/dark_theme4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="112dp"
        android:text="@string/about_about"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="?attr/dark_theme2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="103dp"
        android:layout_height="92dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/about_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="568dp"
        android:text="@string/about_po"
        android:background="?attr/dark_theme3"
        android:textColor="?attr/dark_theme4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>



